# abutown

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  buf.gen.yaml  buf.yaml  cards.html  fly.toml  index.html  look.html  package-lock.json  package.json  playwright.config.ts  progress.md  tsconfig.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.ts
backend/: Cargo.toml  README.md
backend/crates/demand-gen/: Cargo.toml
backend/crates/demand-gen/src/: gateways.rs  gravity.rs  inputs.rs  lib.rs  main.rs  output.rs  profiles.rs  reach.rs
backend/crates/demand-gen/tests/: gateway_reach_diag.rs
backend/crates/protocol/: Cargo.toml  build.rs
backend/crates/protocol/benches/: wire_size.rs
backend/crates/protocol/proto/: abutown.proto  live.proto  traffic.proto  world.proto
backend/crates/protocol/src/: lib.rs
backend/crates/sim-core/: Cargo.toml
backend/crates/sim-core/benches/: economy_tick.rs  mobility_tick.rs  mobility_tick_lod.rs
backend/crates/sim-core/benches/common/: mod.rs
backend/crates/sim-core/examples/: profile_lod_tick.rs
backend/crates/sim-core/src/: base_world.rs  chunk.rs  city_network.rs  ecs_runtime.rs  events.rs  ids.rs  lib.rs  mobility.rs  mobility_geometry.rs  persistence.rs  road_vehicles.rs  scheduler.rs  terrain_seed.rs  tile.rs
backend/crates/sim-core/src/economy/: accounts.rs  attribution.rs  auction.rs  audit.rs  capita.rs  commuters.rs  flow_shipments.rs  flow_telemetry.rs  goods.rs  ids.rs  inventory.rs  ledger.rs  macro_flow.rs  market.rs  markets_layer.rs  materialize.rs  mod.rs  money.rs  orders.rs  persist.rs  pools.rs  pricing.rs  producers.rs  production.rs  seed.rs  shoppers.rs  systems.rs  trader_render.rs  traders.rs  transport.rs  wages.rs  warm_flow.rs
backend/crates/sim-core/src/economy/tests/: abutopia_price_stability.rs  abutopia_visible.rs  auction.rs  audit.rs  capita.rs  capita_overflow.rs  commuters.rs  conservation.rs  (+25 more)
backend/crates/sim-core/src/mobility/: api.rs  components.rs  dto.rs  lod.rs  market_binding.rs  mod.rs  persist_snapshot.rs  records.rs  resources.rs  seed.rs  snapshot_provider.rs  systems.rs
backend/crates/sim-core/src/population/: mod.rs
backend/crates/sim-core/src/routing/: builder.rs  cost_model.rs  flow_field.rs  graph.rs  hpa.rs  mod.rs  path_cache.rs  pathfinding.rs  plugin.rs  profile.rs  spatial_index.rs  traffic.rs  transit.rs  waiting.rs
backend/crates/sim-core/src/time/: mod.rs
backend/crates/sim-core/src/world/: components.rs  events.rs  mod.rs  persistence.rs  plugin.rs  resources.rs  schedule.rs  snapshot_provider.rs  systems.rs  tile_entity.rs
backend/crates/sim-core/tests/: abutopia_bundle.rs  base_world_bundle.rs  economy_production_chain.rs  mobility_lod_lifecycle.rs  mobility_persistence_round_trip.rs  population_lifecycle.rs  population_persistence_reload.rs  round_trip_movement.rs
backend/crates/sim-core/tests/fixtures/: phase3-mobility-snapshot.json
backend/crates/sim-server/: Cargo.toml
backend/crates/sim-server/migrations/: 202605150001_world_events.sql  202605150002_card_hand_core.sql  202605150003_chunk_snapshots.sql  202605160001_chunk_recovery.sql  202605160002_mobility_snapshots.sql  202605160003_road_vehicle_snapshots.sql  202605160005_drop_road_vehicle_snapshots.sql  202605280001_chunk_snapshot_base_world_metadata.sql  202605280001_snapshot_base_world_metadata.sql  202605280002_mobility_snapshot_base_world_metadata.sql  202605300001_economy_snapshots.sql  202605310001_economy_events.sql  202606010001_mobility_snapshot_last_processed_month.sql  202607050001_world_core_snapshots.sql  202607060001_building_attributes.sql  202607070001_world_core_snapshot_compress.sql
backend/crates/sim-server/src/: app.rs  building_attributes.rs  card_hand.rs  chunk_registry.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  persistence_liveness.rs  persistence_plugin.rs  postgres_economy.rs  postgres_economy_events.rs  postgres_events.rs  postgres_mobility.rs  postgres_road_vehicles.rs  postgres_snapshots.rs  runtime.rs  runtime_view.rs  world.rs  world_store.rs
backend/crates/sim-server/src/app/: base_world_response.rs  mod.rs  proto_convert.rs  tests.rs
backend/crates/sim-server/src/runtime/: base_world_expectations.rs  mod.rs  tests.rs
backend/crates/sim-server/tests/: card_hand_http.rs  http.rs  live_ws.rs  restart_resume.rs  startup.rs  websocket.rs  world_store.rs
backend/crates/traffic-core/: Cargo.toml
backend/crates/traffic-core/src/: fleet.rs  idm.rs  junction.rs  lib.rs  mobil.rs  rng.rs  tick.rs
backend/crates/traffic-core/tests/: junction.rs  overtake.rs  ring.rs  route_storage.rs  winterthur.rs
backend/crates/traffic-core/tests/fixtures/: roundabout.json
backend/crates/traffic-net/: Cargo.toml
backend/crates/traffic-net/src/: lib.rs  types.rs  validate.rs
backend/crates/traffic-net/tests/: load_tests.rs
backend/crates/traffic-net/tests/fixtures/: mini.json
backend/crates/winterthur-traffic/: Cargo.toml
backend/crates/winterthur-traffic/src/: audit.rs  cells.rs  clock.rs  demand.rs  flow.rs  gateway.rs  lib.rs  main.rs  measure.rs  replanning.rs  router.rs  shell.rs  spawner.rs  trip_router.rs
backend/crates/winterthur-traffic/tests/: conservation.rs  gateway.rs  no_route_diag.rs  perf.rs  real_net.rs  replanning_convergence.rs  s4_replanning_shell.rs  shell.rs  world_bridge.rs
backend/crates/winterthur-traffic/tests/common/: mod.rs
backend/crates/winterthur-traffic/tests/fixtures/: diamond-gateway.json  diamond.json
backend/crates/world-core/: Cargo.toml
backend/crates/world-core/src/: clock.rs  lib.rs  persist.rs  systems.rs
backend/crates/world-core/src/citizens/: mod.rs  rhythm.rs  trips.rs
backend/crates/world-core/src/econ/: accounts.rs  auction.rs  audit.rs  capita.rs  config.rs  flow_shipments.rs  flow_telemetry.rs  goods.rs  inventory.rs  ledger.rs  macro_flow.rs  market.rs  mod.rs  orders.rs  pools.rs  pricing.rs  producers.rs  production.rs  seed.rs  wages.rs
backend/crates/world-core/src/model/: building.rs  mod.rs
backend/crates/world-core/tests/: econ_loop.rs  trips.rs
(+810 files in other folders)
