[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/sim-server",
  "crates/traffic-net",
  "crates/traffic-core",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
http-body-util = "0.1"
dotenvy = "0.15"
jsonwebtoken = "9"
prost = "0.13"
prost-build = "0.13"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
