[package]
name = "abutown-protocol"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
time.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
criterion = { workspace = true }
serde_json.workspace = true

[[bench]]
name = "wire_size"
harness = false
