[package]
name = "sim-core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
abutown-protocol = { path = "../protocol" }
async-trait.workspace = true
bevy_ecs.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
