[package]
name = "sim-core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
abutown-protocol = { path = "../protocol" }
async-trait.workspace = true
bevy_ecs.workspace = true
blake3 = "1"
rand = "0.8"
rstar = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
tokio.workspace = true

[[bench]]
name = "mobility_tick"
harness = false

[[bench]]
name = "mobility_tick_lod"
harness = false

[[bench]]
name = "economy_tick"
harness = false
