[package]
name = "sim-server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "sim_server"
path = "src/lib.rs"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arc-swap = "1"
axum.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
