[package]
name = "sim-server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "sim_server"
path = "src/lib.rs"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arc-swap = "1"
axum.workspace = true
bevy_ecs.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
zstd = "0.13"
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
traffic-net = { path = "../traffic-net" }
uuid.workspace = true
winterthur-traffic = { path = "../winterthur-traffic" }
world-core = { path = "../world-core" }

[dev-dependencies]
abutown-protocol = { path = "../protocol" }
blake3.workspace = true
demand-gen = { path = "../demand-gen" }
futures-util.workspace = true
http-body-util.workspace = true
prost.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
