[package]
name = "winterthur-traffic"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "winterthur-traffic"
path = "src/main.rs"

[dependencies]
traffic-net = { path = "../traffic-net" }
fast_paths.workspace = true

[dev-dependencies]
traffic-core = { path = "../traffic-core" }
